--- a/templates/dashboards.html
+++ b/templates/dashboards.html
@@ -182,7 +182,7 @@
                     <div class="luna-title">
                         <i class="bi bi-stars"></i> Insights da Luna AI
                     </div>
-                    <div class="luna-text">{{ sugestao }}</div>
+                    <div class="luna-text">{{ sugestao if sugestao else "Registre ao menos uma transação para gerar uma análise personalizada" }}</div>
                 </div>
             </div>
         </div>
