--- a/templates/hello.html
+++ b/templates/hello.html
@@ -162,7 +162,7 @@
 
     <footer class="text-center">
         <div class="container">
-            <p class="mb-0">&copy; 2025 JetMoney Consultoria</p>
+            <p class="mb-0">&copy; 2026 JetMoney Consultoria.</p>
         </div>
     </footer>
 
