--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -157,12 +157,17 @@
             background: var(--danger-red);
             color: white;
         }
+
+        .eugestor-link {
+            text-decoration: none;
+            color: var(--primary-orange);
+        }
     </style>
 </head>
 <body>
 
     <aside class="sidebar">
-        <div class="sidebar-header">EuGestor</div>
+        <div class="sidebar-header"><a href="/atualizacoes" class="eugestor-link">EuGestor</a></div>
         <nav class="flex-column">
             <a href="/home" class="nav-link"><i class="bi bi-house"></i> <span>Home</span></a>
             <a href="/perfil" class="nav-link"><i class="bi bi-person"></i> <span>Perfil</span></a>
