--- a/templates/admin.html
+++ b/templates/admin.html
@@ -148,15 +148,21 @@
         .i {
             color: var(--primary-orange);
         }
+
+        .eugestor-link {
+            text-decoration: none;
+            color: var(--primary-orange);
+        }
     </style>
 </head>
 <body>
 
     <aside class="sidebar">
-        <div class="sidebar-header">EuGestor</div>
+        <div class="sidebar-header"><a href="/atualizacoes" class="eugestor-link">EuGestor</a></div>
         <nav class="flex-column">
             <a href="/home" class="nav-link"><i class="bi bi-house-door"></i> <span>Home</span></a>
             <a href="/adm" class="nav-link active"><i class="bi bi-shield-lock"></i> <span>Administrador</span></a>
+            <a href="/postar_atualizacao" class="nav-link"><i class="bi bi-send"></i> <span>Enviar atualização</span></a>
             <hr class="mx-3" style="border-color: #333;">
             <a href="/logout" class="nav-link text-danger"><i class="bi bi-box-arrow-right"></i> <span>Sair</span></a>
         </nav>
