--- a/templates/dashboards.html
+++ b/templates/dashboards.html
@@ -124,12 +124,17 @@
         }
 
         canvas { width: 100% !important; }
+
+        .eugestor-link {
+            text-decoration: none;
+            color: var(--primary-orange);
+        }
     </style>
 </head>
 <body>
 
     <aside class="sidebar">
-        <div class="sidebar-header">EuGestor</div>
+        <div class="sidebar-header"><a href="/atualizacoes" class="eugestor-link">EuGestor</a></div>
         <nav class="flex-column">
             <a href="/home" class="nav-link"><i class="bi bi-house"></i> <span>Home</span></a>
             <a href="/dashboard" class="nav-link"><i class="bi bi-clipboard2-data"></i> <span>Dashboard</span></a>
