--- a/templates/extrato.html
+++ b/templates/extrato.html
@@ -150,12 +150,17 @@
             border: 1px solid var(--border-color);
             font-weight: 400;
         }
+
+        .eugestor-link {
+            text-decoration: none;
+            color: var(--primary-orange);
+        }
     </style>
 </head>
 <body>
 
     <aside class="sidebar">
-        <div class="sidebar-header">EuGestor</div>
+        <div class="sidebar-header"><a href="/atualizacoes" class="eugestor-link">EuGestor</a></div>
         <nav class="flex-column">
             <a href="/home" class="nav-link"><i class="bi bi-house-door"></i> <span>Home</span></a>
             <a href="/transacao" class="nav-link"><i class="bi bi-plus-circle"></i> <span>Nova Transação</span></a>
