--- a/templates/atualizacao.html
+++ b/templates/atualizacao.html
@@ -132,7 +132,7 @@
         </div>
         {% endfor %}
     {% else %}
-        <p class="text-center text-muted">Nenhuma novidade por enquanto!</p>
+        <p class="text-center text-light">Nenhuma novidade por enquanto!</p>
     {% endif %}
 </div>
 
